contact page updates with GitHub pages

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
   <header>
     <nav>
       <ul>
-        <li class="home"><a href="https://JaseadamsDev.github.io/Cookies/index.html">Home</a></li>
-        <li class="sales"><a href="https://JaseadamsDev.github.io/Cookies/sales.html">Sales Info</a></li>
-        <li class="contact"><a href="https://JaseadamsDev.github.io/Cookies/contact.html">Contact Us</a></li>
+        <li class="home"><a href="https://JaseadamsDev.github.io/cookie-stand/index.html">Home</a></li>
+        <li class="sales"><a href="https://JaseadamsDev.github.io/cookie-stand/sales.html">Sales Info</a></li>
+        <li class="contact"><a href="https://JaseadamsDev.github.io/cookie-stand/contact.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
