Objects, Set up css, html, js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Jason's Salmon Cookies</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+
+    <footer>
+
+    </footer>
+
+    <script defer src="./js/app.js"></script>
 </body>
 </html>
