--- a/sales.html
+++ b/sales.html
@@ -10,6 +10,149 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <body>
+    <header>
+        <nav>
+            <ul>
+                <!-- <li>class="home"><a href="https:// </li>
+                <li>class="sales"><a href="https:// </li>
+                <li>class="contact"><a href="https:// </li> -->
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Welcome to your Internal Sales data</h2>
+
+        <div class="about">
+        <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet sint quo dolore</P>
+        </div>
+    <table id='dataCookie'>
+      <thead> </thead>
+        <tr>
+            <th timeHr="column">City</th>
+            <th timeHr="column">6:00am</th>
+            <th timeHr="column">7:00am</th>
+            <th timeHr="column">8:00am</th>
+            <th timeHr="column">9:00am</th>
+            <th timeHr="column">10:00am</th>
+            <th timeHr="column">11:00am</th>
+            <th timeHr="column">12:00pm</th>
+            <th timeHr="column">1:00pm</th>
+            <th timeHr="column">2:00pm</th>
+            <th timeHr="column">3:00pm</th>
+            <th timeHr="column">4:00pm</th>
+            <th timeHr="column">5:00pm</th>
+            <th timeHr="column">6:00pm</th>
+            <th timeHr="column">7:00pm</th>
+            <th timeHr="column">Daily Location Total</th>
+        </tr>
+    </thead>
     
+    <tbody id="bodyOfTable">
+                                    
+            <tr>
+                <td>Seattle</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+                <td>000</td>
+            </tr>
+            <tr>
+                <td>Tokyo</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00)</td>
+            </tr>
+            <tr>
+                <td>Dubai</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>0000</td>
+            </tr>
+            <tr>
+                <td>Paris</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>0000</td>
+            </tr>
+            <tr>
+                <td>Lima</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>00</td>
+                <td>0000</td>
+            </tr>
+        </tbody>
+  </table>
+  <table id = "CookieTable">
+
+  </table>
+</main>
+<footer>
+  <!--<div id='infoHq'>
+    <p><strong class='strong'>HQ Location:</strong> 1234 Beachfront Drive, Seatle, WA 98745 <img id='cutter' src="" alt="cutter"> </p>
+    <p><strong class='strong'>Hours of Operation: </strong> 6:00 AM to 8:00 PM</p>
+  </div>-->
+</footer>
+<script defer src="JS/app.js"></script>
 </body>
+
 </html>
