--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,67 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jason's Salmon Cookies</title>
+  <title>Pat's Salmon Cookies</title>
 
   <link rel="stylesheet" href="css/reset.css">
-  <link href=""
-    rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  
 </head>
 
+
 <body>
-    <body>
-  <header>
-    <nav>
-      <ul>
+  
+  <nav>
+    <ul>
+      <li class='start'><a href="index.html">Home</a></li>
+      <li class='right end'><a href="contact.html">Contact Us</a></li>
+      <li class='right'><a href="sales.html">Sales Data</a></li>
+    </ul>
+  </nav>
+  <h1>Contact Us!</h1>
+  <img id='cafe' src="cafesmall.jpg" alt="salmon">
+
+  <div class='about'>
+    <p>Delicious Salmon-Shaped Cookies! These mouth-watering frosted salmon-flavored cookies are a celebration of our zero-legged, 
+        high-jumping fish friends. Enjoy Pat's recipe for salmon-shaped cookies. It includes ingredients such as wild salmon, butter, 
+        sugar, eggs, flour, baking powder, salt, and vanilla extract. It's a tasty recipe that will have everyone asking for seconds! 
+        You can also give us a call at 1-888-WOW-FISHCOOKIE or email us at info@Pats-salmoncookies.com</p>
+  </div>
+
+  <div id='contact'>
+    <img id='logo' src="cookie-logo.png" alt="cookie shop logo">
+    <label for="name">Name: </label>
+    <input type="text" name="name" id="name"><br>
+    <label for="email">Email: </label>
+    <input type="email" name="email" id="email"><br>
+    <label class='topalign' for="message">Message: </label>
+    <textarea name="message" id="message" cols="40" rows="7"></textarea>   
+  </div>
+  
+  <div id='addresses'>
+    <h4>Addresses for all 5 of our Locations:</h4>
+    <p>Please Note: Our Store Hours are currently the same for all locations: 6:00 AM to 8:00 PM</p>
+    <ul>
+      <li>Seattle: 1234 Beachfront Drive, Seatle, WA 98745</li>
+      <li>Tokyo: 562 Yummycookie Road, Tokyo, JP 99985</li>
+      <li>Dubai: 1430 Main Cookie Street, Dubai, UAE 700955</li>
+      <li>Paris: 1029 Love Salmon Cookie Ave, Paris, FR 16744</li>
+      <li>Lima: 8822 Cookie Forest Drive, Lima, PU 437788</li>
+    </ul>
+  </div>
+
+
+
+</body>
+</html>
+
+
+
         <li class="home"><a href="https://JaseadamsDev.github.io/cookie-stand/index.html">Home</a></li>
         <li class="sales"><a href="https://JaseadamsDev.github.io/cookie-stand/sales.html">Sales Info</a></li>
         <li class="contact"><a href="https://JaseadamsDev.github.io/cookie-stand/contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main></main>
-  <footer></footer>
-</body>
-
-</html>
