--- a/index.html
+++ b/index.html
@@ -1,20 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jason's Salmon Cookies</title>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pat's Salmon Cookies</title>
+
+  <link rel="stylesheet" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,800;1,300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  
+
 </head>
+
 <body>
-    <header>
+  
+  <nav>
+    <ul>
+      <li class='start'><a href="index.html"><img id='logo' src='cookie-logo.png'>Home</a></li>
+      <li class='right end'><a href="contact.html">Contact Us</a></li>
+      <li class='right'><a href="sales.html">Sales Data</a></li>
+    </ul>
+  </nav>
 
-    </header>
+  <img class='salmon' src="salmon.png" alt="salmon">
 
-    <footer>
+  <h1>Salmon Cookies</h1>
 
-    </footer>
+  <div class='about'>
+    <p>Pat's Salmon Cookies, LLC is the premier provider of delicious, delectable, and delightful salmon-flavored cookies. 
+        Our secret family recipe has been passed down for generations, and now we’re bringing it to you! Our cookies are made 
+        from nothing but the freshest ingredients and are guaranteed to make your taste buds dance with joy. Whether you’re 
+        looking for a special treat for a special someone or just want something to brighten your day, Pat's Salmon Cookies, LLC is here for you!</p>
+  </div>
+  <div>
+    <div class="gallery">
+        <img src="cookie1.png" alt="salmon">
+        <img src="cookie2.png" alt="salmon">
+        <img src="cookie3.png" alt="salmon">
+        <img src="cookie4.png" alt="salmon">
+        <img src="cookie5.png" alt="salmon">
+        <img src="cookie6.png" alt="salmon">
+        <img src="cookie7.png" alt="salmon">
+        <img src="cookie8.png" alt="salmon">
+        <img src="cookie9.png" alt="salmon">
+        <img src="cookie10.jpg" alt="salmon">
+        <img src="cookie11.jpg" alt="salmon">
+        <img src="cookie12.jpg" alt="salmon">
+        <img src="cookie13.jpg" alt="salmon">
+        <img src="cookie14.jpg" alt="salmon">
+        <img src="cookie15.jpg" alt="salmon">
+        <img src="cookie16.jpg" alt="salmon">
+      </div>
 
-    <script defer src="./js/app.js"></script>
+
+  </div>
+  <footer>
+    <div id='info'>
+      <p><strong class='strong'>Location:</strong> 1234 Beachfront Drive, Seatle, WA 98745 <img id='logo' src="cookie-logo.png" alt="cookie logo"> </p>
+      <p><strong class='strong'>Hours of Operation: </strong> 6:00 AM to 8:00 PM</p>
+
+    </div>
+    <p>To Contact Us, please visit the <a class='specialA' href="contact.html">Contact Us</a> Page</p>
+  </footer>
+  
 </body>
 </html>
